--- a/pages/works.html
+++ b/pages/works.html
@@ -28,10 +28,10 @@
                 WORKS
             </h3>
             <h1>
-                My works in the my life.
+                My works in my life.
             </h1>
             <h4>
-                These are my works done in the my life.
+                These are my works done in my life.
             </h4>
             <div class="works-grid">
                 <div class="work-item">
