--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -28,8 +28,12 @@
             CONTACTS
         </h3>
         <h1>
-            Contattatemi quando volete.
+            Sempre disponibile.
         </h1>
+            <div class="contacts-item">
+                <h2>Tel</h2>
+                <h4>+39 3488833069</h4>
+            </div>
             <div class="contacts-item">
                 <h2>Email</h2>
                 <h4>dirisio.giustinocristian.studente@itispaleocapa.it</h4>
