--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -30,6 +30,7 @@
         <h1>
             Sempre disponibile.
         </h1>
+            <div class="contacts-section">
             <div class="contacts-item">
                 <h2>Tel</h2>
                 <h4>+39 3488833069</h4>
